# multiplatform-sockets

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/broadcast_receiver/: CMakeLists.txt  main.cpp
examples/broadcast_sender/: CMakeLists.txt  main.cpp
examples/helloworld/: CMakeLists.txt  main.cpp
examples/tcp_client/: CMakeLists.txt  main.cpp
examples/tcp_server/: CMakeLists.txt  main.cpp
examples/udp_client/: CMakeLists.txt  main.cpp
examples/udp_server/: CMakeLists.txt  main.cpp
examples/uwp_client/: App.cpp  Package.appxmanifest  mps-uwp-client.sln  mps-uwp-client.vcxproj  mps-uwp-client.vcxproj.filters
examples/uwp_server/: App.cpp  Package.appxmanifest  mps-uwp-server.sln  mps-uwp-server.vcxproj  mps-uwp-server.vcxproj.filters
include/: mps.h
include/mps/: address.h  address_family.h  defines.h  exception.h  mps.h  new_udp_socket.h  protocol.h  socket.h  tcp_client_socket.h  tcp_server_socket.h  tcp_socket.h  udp_packet.h  udp_socket.h
scripts/: run-tests.sh
src/: CMakeLists.txt  address.cpp  error.cpp  error.h  exception.cpp  internal.h  mps_internal.h  new_udp_socket.cpp  socket.cpp  tcp_client_socket.cpp  tcp_server_socket.cpp  tcp_socket.cpp  udp_packet.cpp  udp_socket.cpp  wsa.cpp  wsa.h
tests/: CMakeLists.txt  address_exception_test.cpp  address_test.cpp  ip_address_test.cpp  socket_exception_test.cpp  tcp_client_socket_test.cpp  tcp_server_socket_test.cpp  udp_socket_test.cpp
